# agile-ai

backend/: .env.template  pyproject.toml
backend/alembic/versions/: 7d6424e0a6df_resume_uploads_database.py  9e8b15fe9e03_init.py
backend/app/: config.py
backend/app/routers/: __init__.py  assistant.py  resume.py  system.py  users.py
backend/app/utils/: minio.py
backend/app/utils/models/: __init__.py  assistant.py  kanban.py  resume.py  users.py
backend/app/utils/postgres/: __init__.py  schema.py
backend/src/: app.js
frontend/src/: App.tsx
frontend/src/components/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Signup.tsx  Team.tsx
frontend/src/store/: authStore.ts
